--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -3985,30 +3985,65 @@
       "metadata": {
         "id": "DH8AXGZR1pD2",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "0dabd3b7-8ca8-4909-9894-0f966f2238a3"
       },
       "cell_type": "code",
       "source": [
         "from prettytable import PrettyTable  \n",
         "x = PrettyTable()\n",
         "\n",
-        "x.field_names = [\"Algorithm\", \"Featurization\",\"n_neighbors\", \"Train_AUC\", \"Test_AUC\"]\n",
+        "x.field_names = [\"Algorithm Type\", \"Featurization\",\"Optimal Neighbours\", \"Train AUC\", \"Test AUC\"]\n",
         "\n",
-        "x.add_row([\"KNN brute force\", \"BOW\",3, 0.55961, 0.55926])\n",
-        "x.add_row([\"KNN brute force\", \"TF-IDF\", 9, 0.54983, 0.54893])\n",
-        "x.add_row([\"KNN brute force\",\"AVG W2V\", 3, 0.64118, 0.64767])\n",
-        "x.add_row([\"KNN brute force\", \"TFIDF W2V\", 3, 0.62198, 0.61026])\n",
+        "x.add_row([\"KNN brute force\", \"BOW\",5, 0.8721, 0.6438])\n",
+        "x.add_row([\"KNN brute force\", \"TF-IDF\", 5, 0.8788, 0.6548])\n",
+        "x.add_row([\"KNN brute force\",\"AVG W2V\", 3, 0.8905, 0.5000])\n",
+        "x.add_row([\"KNN brute force\", \"TFIDF W2V\", 7, 0.8205, 0.8111])\n",
         "x.add_row([\"---------\",\"-----------\", \"-----------\",\"-----------\",\"-----------\"])\n",
         "x.add_row([\"---------\",\"-----------\", \"-----------\",\"-----------\",\"-----------\"])\n",
-        "x.add_row([\"KNN kd-tree\", \"BOW\", 3, 0.56206, 0.55871])\n",
-        "x.add_row([\"KNN kd-tree\", \"TF-IDF\", 9, 0.54983, 0.54893])\n",
-        "x.add_row([\"KNN kd-tree\",\"AVG W2V\", 3, 0.64118, 0.64784])\n",
+        "x.add_row([\"KNN kd-tree\", \"BOW\", 5, 0.8789, 0.6548])\n",
+        "x.add_row([\"KNN kd-tree\", \"TF-IDF\", 5, 0.8489, 0.5065])\n",
+        "x.add_row([\"KNN kd-tree\",\"AVG W2V\", 3, 0.8930, 0.5002])\n",
         "x.add_row([\"KNN kd-tree\", \"TFIDF W2V\", 5, 0.9310, 0.7922])\n",
         "\n",
         "print(x)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-----------------+---------------+--------------------+-------------+-------------+\n",
+            "|  Algorithm Type | Featurization | Optimal Neighbours |  Train AUC  |   Test AUC  |\n",
+            "+-----------------+---------------+--------------------+-------------+-------------+\n",
+            "| KNN brute force |      BOW      |         5          |    0.8721   |    0.6438   |\n",
+            "| KNN brute force |     TF-IDF    |         5          |    0.8788   |    0.6548   |\n",
+            "| KNN brute force |    AVG W2V    |         3          |    0.8905   |     0.5     |\n",
+            "| KNN brute force |   TFIDF W2V   |         7          |    0.8205   |    0.8111   |\n",
+            "|    ---------    |  -----------  |    -----------     | ----------- | ----------- |\n",
+            "|    ---------    |  -----------  |    -----------     | ----------- | ----------- |\n",
+            "|   KNN kd-tree   |      BOW      |         5          |    0.8789   |    0.6548   |\n",
+            "|   KNN kd-tree   |     TF-IDF    |         5          |    0.8489   |    0.5065   |\n",
+            "|   KNN kd-tree   |    AVG W2V    |         3          |    0.893    |    0.5002   |\n",
+            "|   KNN kd-tree   |   TFIDF W2V   |         5          |    0.931    |    0.7922   |\n",
+            "+-----------------+---------------+--------------------+-------------+-------------+\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "1eTN7FQS5Ppe",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## TFIDF W2V gives optimal results as compared to rest of the featurization techniques on both the variants of the algorithm."
+      ]
     }
   ]
 }
