--- a/NaiveBayes.ipynb
+++ b/NaiveBayes.ipynb
@@ -2023,7 +2023,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "866ae76d-ecb0-4d48-c80a-d0471919853a"
+        "outputId": "8d707018-102e-4bca-edd7-5cc55039ea81"
       },
       "cell_type": "code",
       "source": [
@@ -2042,7 +2042,7 @@
         "print(X_cv_bow.shape, y_cv.shape)\n",
         "print(X_test_bow.shape, y_test.shape)"
       ],
-      "execution_count": 29,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -2068,7 +2068,7 @@
       },
       "cell_type": "code",
       "source": [
-        " from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
         "from sklearn.naive_bayes import MultinomialNB\n",
         "from sklearn.metrics import f1_score\n",
         "from sklearn.metrics import roc_auc_score\n",
@@ -2723,142 +2723,6 @@
     },
     {
       "metadata": {
-        "id": "YtxiAr9ibPf8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "eRepIFrcbQlR",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "# <font color='yellow'> Feature Engineering</font>\n",
-        "\n"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "45aiw47TbPi6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "a = []\n",
-        "for i in range(0,len(preprocessed_reviews)):\n",
-        "    a.append(len(preprocessed_reviews[i]))\n",
-        "    \n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "ptkZAml5bPoK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "a = np.array(a).T"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "jQ2o1YAYbPlz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "# X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, shuffle=Flase)# this is for time series split\n",
-        "a_train, a_test, y_train, y_test = train_test_split(a, Y, test_size=0.33) # this is random splitting\n",
-        "a_train, a_cv, y_train, y_cv = train_test_split(a_train, y_train, test_size=0.33) # this is random splitting"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "HzWpsOXBcgZ3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "X_test_bow = np.hstack((X_test_bow,a_test))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "Y_H0XtxHcghk",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "X_train_bow = np.hstack((X_train_bow,a_train))\n",
-        "X_cv_bow = np.hstack((X_cv_bow,a_cv))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "CGksHiitcglM",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "krtiXPEzcgow",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "t9X01PBScgsZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "vst5Y7mmJklu",
         "colab_type": "text"
       },
@@ -2871,14 +2735,54 @@
       "metadata": {
         "id": "De9HYtIGJklv",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "c08cccf8-5245-454b-8852-f3824d354ede"
       },
       "cell_type": "code",
       "source": [
-        "# Please compare all your models using Prettytable library"
+        "# Please compare all your models using Prettytable library\n",
+        "from prettytable import PrettyTable  \n",
+        "x = PrettyTable()\n",
+        "\n",
+        "x.field_names = [\"Featurization\",\"Optimal Alpha Value\", \"Train AUC\", \"Test AUC\"]\n",
+        "x.add_row([\"-----------\", \"-----------\",\"-----------\",\"-----------\"])\n",
+        "x.add_row([\"BOW\", 0.35, 0.9942, 0.8343])\n",
+        "x.add_row([\"TF-IDF\", 0.4, 0.9732, 0.8935])\n",
+        "\n",
+        "x.add_row([\"-----------\", \"-----------\",\"-----------\",\"-----------\"])\n",
+        "\n",
+        "print(x)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+---------------+---------------------+-------------+-------------+\n",
+            "| Featurization | Optimal Alpha Value |  Train AUC  |   Test AUC  |\n",
+            "+---------------+---------------------+-------------+-------------+\n",
+            "|  -----------  |     -----------     | ----------- | ----------- |\n",
+            "|      BOW      |         0.35        |    0.9942   |    0.8343   |\n",
+            "|     TF-IDF    |         0.4         |    0.9732   |    0.8935   |\n",
+            "|  -----------  |     -----------     | ----------- | ----------- |\n",
+            "+---------------+---------------------+-------------+-------------+\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "cbqyxXZwmUVU",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## By observing the the train and test acu, BoW model overfits as compared to TFIDF."
+      ]
     }
   ]
 }
