--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -1888,18 +1888,18 @@
         "    <li><strong>Representation of results</strong>\n",
         "        <ul>\n",
         "    <li>You need to plot the performance of model both on train data and cross validation data for each hyper parameter, like shown in the figure.\n",
-        "    <img src='train_cv_auc.JPG' width=300px></li>\n",
+        "    <img src='https://github.com/gopalkalpande/Assignments_ML/blob/master/train_cv_auc.JPG?raw=1' width=300px></li>\n",
         "    <li>Once after you found the best hyper parameter, you need to train your model with it, and find the AUC on test data and plot the ROC curve on both train and test.\n",
-        "    <img src='train_test_auc.JPG' width=300px></li>\n",
+        "    <img src='https://github.com/gopalkalpande/Assignments_ML/blob/master/train_test_auc.JPG?raw=1' width=300px></li>\n",
         "    <li>Along with plotting ROC curve, you need to print the <a href='https://www.appliedaicourse.com/course/applied-ai-course-online/lessons/confusion-matrix-tpr-fpr-fnr-tnr-1/'>confusion matrix</a> with predicted and original labels of test data points. Please visualize your confusion matrices using <a href='https://seaborn.pydata.org/generated/seaborn.heatmap.html'>seaborn heatmaps.\n",
-        "    <img src='confusion_matrix.png' width=300px></li>\n",
+        "    <img src='https://github.com/gopalkalpande/Assignments_ML/blob/master/confusion_matrix.png?raw=1' width=300px></li>\n",
         "        </ul>\n",
         "    </li>\n",
         "    <br>\n",
         "    <li><strong>Conclusion</strong>\n",
         "        <ul>\n",
         "    <li>You need to summarize the results at the end of the notebook, summarize it in the table format. To print out a table please refer to this prettytable library<a href='http://zetcode.com/python/prettytable/'>  link</a> \n",
-        "        <img src='summary.JPG' width=400px>\n",
+        "        <img src='https://github.com/gopalkalpande/Assignments_ML/blob/master/summary.JPG?raw=1' width=400px>\n",
         "    </li>\n",
         "        </ul>\n",
         "</ol>"
