--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -39,10 +39,10 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    }
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -1932,6 +1932,28 @@
     },
     {
       "metadata": {
+        "id": "DpcA8JwTo3X4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "Y = final['Score']\n",
+        "# X = data['clean_text'].values\n",
+        "X = preprocessed_reviews\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, shuffle=Flase)# this is for time series split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33) # this is random splitting\n",
+        "X_train, X_cv, y_train, y_cv = train_test_split(X_train, y_train, test_size=0.33) # this is random splitting\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "LE_XPVZJLPo4",
         "colab_type": "text"
       },
@@ -1959,6 +1981,67 @@
       "cell_type": "code",
       "source": [
         "# Please write all the code with proper documentation"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Y3_4tJ8XVAFG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Please write all the code with proper documentation\n",
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "count_vect = CountVectorizer()\n",
+        "count_vect.fit(X_train) # fit has to happen only on train data\n",
+        "\n",
+        "# we use the fitted CountVectorizer to convert the text to vector\n",
+        "X_train_bow = count_vect.transform(X_train)\n",
+        "X_cv_bow = count_vect.transform(X_cv)\n",
+        "X_test_bow = count_vect.transform(X_test)\n",
+        "\n",
+        "print(\"After vectorizations\")\n",
+        "print(X_train_bow.shape, y_train.shape)\n",
+        "print(X_cv_bow.shape, y_cv.shape)\n",
+        "print(X_test_bow.shape, y_test.shape)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "bKr33dh1VAQk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Grid search cross validation\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "grid = {\"C\" : np.logspace(-3,3,7), \"penalty\": [\"l1\"] } # l1 lasso l2 ridge\n",
+        "logreg = LogisticRegression()\n",
+        "logreg_cv = GridSearchCV(logreg, grid ,cv = 10)\n",
+        "logreg_cv.fit(x_train_bow, y_train)\n",
+        "\n",
+        "print(\"tuned hpyerparameters :(best parameters) \",logreg_cv.best_params_)\n",
+        "print(\"accuracy :\",logreg_cv.best_score_)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "1-HQICKmVAX6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
